--- a/index.html
+++ b/index.html
@@ -582,6 +582,18 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form" action="">
+          <label class="footer-label"
+            >Subscribe
+            <input
+              class="footer-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+          </label>
+          <button class="footer-btn" type="submit">Subscribe</button>
+        </form>
       </div>
     </footer>
   </body>
