--- a/index.html
+++ b/index.html
@@ -582,19 +582,113 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form" action="">
-          <label class="footer-label"
-            >Subscribe
+        <form class="footer-form">
+          <div class="footer-form-container">
+            <label class="footer-label" for="email">Subscribe </label>
+
             <input
               class="footer-input"
+              id="email"
               type="email"
               name="email"
               placeholder="E-mail"
             />
-          </label>
+          </div>
           <button class="footer-btn" type="submit">Subscribe</button>
         </form>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="btn-close" type="button" aria-label="modal close button">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="form-discription">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="form-modal">
+          <div class="form-modal-container">
+            <label class="form-label" for="name">Name</label>
+            <div class="form-input-container">
+              <input
+                class="form-input"
+                id="name"
+                type="text"
+                name="name"
+                required
+                pattern="[a-zA-Zа-яА-ЯїЇєЄґҐйЙ']+"
+                title="Serhii"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-modal-container">
+            <label class="form-label" for="phone">Phone</label>
+            <div class="form-input-container">
+              <input
+                class="form-input"
+                id="phone"
+                type="tel"
+                name="phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-modal-container">
+            <label class="form-label" for="email">Email</label>
+            <div class="form-input-container">
+              <input
+                class="form-input"
+                id="email"
+                type="email"
+                name="email"
+                required
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-modal-container comment">
+            <label class="form-label" for="comment">Comment</label>
+            <textarea
+              class="form-comment"
+              id="comment"
+              type="text"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-accept">
+            <input
+              class="form-accept-checkbox visually-hidden"
+              id="accept"
+              type="checkbox"
+              name="accept"
+              value="true"
+              required
+            />
+            <label class="form-accept-label" for="accept"
+              ><span class="form-accept-checkbox-area">
+                <svg class="form-accept-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-accept"></use></svg></span
+              >I accept the terms and conditions of the
+              <a class="privacy-policy">Privacy Policy</a></label
+            >
+          </div>
+          <button class="form-btn-send" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
