--- a/index.html
+++ b/index.html
@@ -594,7 +594,14 @@
               placeholder="E-mail"
             />
           </div>
-          <button class="footer-btn" type="submit">Subscribe</button>
+          <button class="footer-btn" type="submit">
+            Subscribe
+            <span class="footer-btn-container">
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </span>
+          </button>
         </form>
       </div>
     </footer>
