--- a/index.html
+++ b/index.html
@@ -584,11 +584,11 @@
         </div>
         <form class="footer-form">
           <div class="footer-form-container">
-            <label class="footer-label" for="email">Subscribe </label>
+            <label class="footer-label" for="footer-email">Subscribe </label>
 
             <input
               class="footer-input"
-              id="email"
+              id="footer-email"
               type="email"
               name="email"
               placeholder="E-mail"
@@ -671,7 +671,6 @@
             <textarea
               class="form-comment"
               id="comment"
-              type="text"
               name="comment"
               placeholder="Text input"
             ></textarea>
