--- a/index.html
+++ b/index.html
@@ -582,27 +582,25 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
-          <div class="footer-form-container">
-            <label class="footer-label" for="footer-email">Subscribe </label>
-
+        <div class="footer-form-container">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form">
             <input
               class="footer-input"
-              id="footer-email"
               type="email"
               name="email"
               placeholder="E-mail"
             />
-          </div>
-          <button class="footer-btn" type="submit">
-            Subscribe
-            <span class="footer-btn-container">
-              <svg class="footer-btn-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </span>
-          </button>
-        </form>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <span class="footer-btn-container">
+                <svg class="footer-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -618,18 +616,18 @@
         </p>
         <form class="form-modal">
           <div class="form-modal-container">
-            <label class="form-label" for="name">Name</label>
+            <label class="form-label" for="user-name">Name</label>
             <div class="form-input-container">
               <input
                 class="form-input"
-                id="name"
+                id="user-name"
                 type="text"
-                name="name"
+                name="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯїЇєЄґҐйЙ']+"
                 title="Serhii"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -646,7 +644,7 @@
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -661,30 +659,30 @@
                 name="email"
                 required
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
           <div class="form-modal-container comment">
-            <label class="form-label" for="comment">Comment</label>
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-comment"
-              id="comment"
-              name="comment"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="form-accept">
             <input
               class="form-accept-checkbox visually-hidden"
-              id="accept"
+              id="user-privacy"
               type="checkbox"
-              name="accept"
+              name="user-privacy"
               value="true"
               required
             />
-            <label class="form-accept-label" for="accept"
+            <label class="form-accept-label" for="user-privacy"
               ><span class="form-accept-checkbox-area">
                 <svg class="form-accept-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-accept"></use></svg></span
