edit fotter form

--- a/index.html
+++ b/index.html
@@ -585,12 +585,14 @@
         <div class="footer-form-container">
           <p class="footer-title">Subscribe</p>
           <form class="footer-form">
-            <input
-              class="footer-input"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-            />
+            <label class="footer-label" for="">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="footer-btn" type="submit">
               Subscribe
               <span class="footer-btn-container">
