--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="footer-form-container">
           <p class="footer-title">Subscribe</p>
           <form class="footer-form">
-            <label class="footer-label" for="">
+            <label class="footer-label">
               <input
                 class="footer-input"
                 type="email"
@@ -595,11 +595,9 @@
             </label>
             <button class="footer-btn" type="submit">
               Subscribe
-              <span class="footer-btn-container">
-                <svg class="footer-btn-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </span>
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
             </button>
           </form>
         </div>
